<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPostFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="15dp"
        app:cardBackgroundColor="#ffffff"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:background="#1C3144"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                app:layout_constraintEnd_toStartOf="@+id/imageView7"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toTopOf="@+id/imageView6"></LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/dosis"
                android:text="Edit Post"
                android:textColor="#1C3144"
                android:textSize="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/dosis"
                android:text="Details"
                android:textColor="#1C3144"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_circle_full_blue"
                app:layout_constraintEnd_toStartOf="@+id/imageView7"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_circle_empty_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_picker_actionsInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/from"
                android:textColorHint="@color/blue"
                app:layout_constraintBottom_toTopOf="@+id/rommaiteTextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView6"
                app:startIconDrawable="@drawable/ic_home_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addPost_freg_dateFrom_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="200dp"
                    android:background="#FFFFFF"
                    android:inputType="datetime"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@id/date_picker_actionsInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/to"
                android:textColorHint="@color/blue"
                app:layout_constraintBottom_toTopOf="@+id/rommaiteTextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView6"
                app:startIconDrawable="@drawable/ic_home_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addPost_freg_dateTo_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_marginEnd="8dp"
                    android:background="#FFFFFF"
                    android:inputType="datetime"
                    android:maxLines="1"
                    android:textColor="@color/blue"
                    android:textColorHint="@color/blue" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rommaiteTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/roommate"
                android:textColorHint="@color/blue"
                app:layout_constraintBottom_toTopOf="@+id/locationTextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_picker_actionsInputLayout"
                app:startIconDrawable="@drawable/ic_groups_black_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addPost_freg_rommaite_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="#FFFFFF"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/blue"
                    android:textColorHint="@color/blue" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/locationTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/location"
                android:textColorHint="@color/blue"
                app:layout_constraintBottom_toTopOf="@+id/priceTextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rommaiteTextInputLayout"
                app:startIconDrawable="@drawable/ic_home_location">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addPost_freg_location_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="#FFFFFF"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/blue"
                    android:textColorHint="@color/blue" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/priceTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/price"
                android:textColorHint="@color/blue"
                app:layout_constraintBottom_toTopOf="@+id/bedroomTextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationTextInputLayout"
                app:startIconDrawable="@drawable/ic_home_price">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addPost_freg_price_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="#FFFFFF"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/blue"
                    android:textColorHint="@color/blue" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bedroomTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/bedroom"
                android:textColorHint="@color/blue"
                app:layout_constraintBottom_toBottomOf="@+id/bathroomTextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/bathroomTextInputLayout"
                app:startIconDrawable="@drawable/ic_bed_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addPost_freg_bedroom_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="200dp"
                    android:background="#FFFFFF"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/blue"
                    android:textColorHint="@color/blue" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bathroomTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/bathroom"
                android:textColorHint="@color/blue"
                app:layout_constraintBottom_toTopOf="@+id/peopleTextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/priceTextInputLayout"
                app:startIconDrawable="@drawable/ic_bathtub_24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addPost_freg_bathroom_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_marginEnd="8dp"
                    android:background="#FFFFFF"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/blue"
                    android:textColorHint="@color/blue" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/peopleTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/people"
                android:textColorHint="@color/blue"
                app:layout_constraintBottom_toTopOf="@+id/addPost2_freg_post_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bedroomTextInputLayout"
                app:startIconDrawable="@drawable/ic_home_people">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addPost_freg_people_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="#FFFFFF"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/blue"
                    android:textColorHint="@color/blue" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/addPost2_freg_post_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#1C3144"
                android:text="Continue"
                android:textSize="20dp"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>